# cctracker

./: .gitignore  LICENSE  README.md  dashboard.py  launch_dashboard.sh  pyproject.toml
cctracker/: cli.py  parser.py  report.py  storage.py
cctracker.app/Contents/MacOS/: cctracker
