[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cctracker"
version = "0.1.0"
description = "Automatic Claude Code session tracker — logs every session with tokens, duration, project, and model."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["claude", "anthropic", "ai", "productivity", "tracking", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
cctracker = "cctracker.cli:main"

[project.urls]
Homepage = "https://github.com/marketplacegeeks/cctracker"
Issues   = "https://github.com/marketplacegeeks/cctracker/issues"
